# Ledgerlens-contract

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deploy.sh
contracts/ledgerlens-score/: Cargo.toml
contracts/ledgerlens-score/src/: constants.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  test_attestation.rs  test_batch_attestation.rs  test_consensus.rs  test_cooldown.rs  test_embargo.rs  test_rate_limit.rs  test_upgrade.rs  types.rs
contracts/ledgerlens-score/test_snapshots/test/: test_1_of_1_behaves_like_original.1.json  test_aggregate_equal_weights.1.json  test_aggregate_flag_counts.1.json  test_aggregate_max_pair_tracked.1.json  test_aggregate_pair_deduplication.1.json  test_aggregate_single_pair.1.json  test_aggregate_updates_on_rescore.1.json  test_aggregate_weight_zero_excluded.1.json  test_aggregate_weighted.1.json  test_batch_also_populates_score_history.1.json  test_batch_result_all_accepted.1.json  test_batch_result_index_correct.1.json  test_batch_result_mixed.1.json  test_batch_result_vec_length_matches_input.1.json  test_clear_history_does_not_affect_latest_score.1.json  test_clear_score_does_not_affect_history.1.json  test_clear_score_does_not_affect_other_pairs.1.json  test_clear_score_history_removes_all_entries.1.json  test_clear_score_removes_latest_score.1.json  test_delegate_direct_score_overrides_delegation.1.json  test_delegate_inherits_custodian_score.1.json  test_delegate_propagates_embargo.1.json  test_delegate_snapshot.1.json  test_get_score_not_found.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json  (+25 more)
(+58 files in other folders)
