[package]
name = "ledgerlens-score"
version = "0.1.0"
edition = "2021"
publish = false
description = "On-chain risk score registry for LedgerLens"
repository = "https://github.com/ledgerlens/contract"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
